--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>Using Azure Search Service in Angular Application</h1>
+    <h1>Anthem POC - AI HUB Search</h1>
     <app-main-component></app-main-component>
 </body>
 
